apps/wesley-site/javelin/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wesley-site
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: wesleyklop.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wesley-site
                port:
                  name: http
    - host: wesley.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wesley-site
                port:
                  name: http
    - host: wesl.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wesley-site
                port:
                  name: http
